--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h3 class="title">Minesweeper</h3>
     <h4 class="subtext">Mines Left: <span class="mine_left">20</span></h4>
-    <div id="board"></div>
+    <div class="container"><div id="board"></div></div>
     <script src="index.js"></script>
   </body>
 </html>
